Only stop playback if the stopped event came while we were playing (instead of the normal Loading -> Stop) sequence if JuK didn't commence playback quickly enough.  Backported from trunk, will be in KDE 4.2.1.

BUG:176329

svn path=/branches/KDE/4.2/kdemultimedia/juk/; revision=915880